# pvedeployer

./: HOMELAB.md  INSTALL.md  README.md  app.py  deploy.py  install_debian12.sh  main.py  models.py  proxmox-deployer.service  proxmox.py  pyproject.toml  verify_install.py
attached_assets/: Pasted-proxmox-ui-srvansible01p-pvedeployer-sudo-nano-etc-nginx-sites-available-proxmox-ui-proxmox-ui-s-1741008656207.txt
routes/: auth.py  deployments.py  nodes.py  scripts.py  templates.py
static/js/: dashboard.js  main.js  monitoring.js  network.js  templates.js  theme.js
templates/: index.html  layout.html  monitoring.html
templates/auth/: login.html  signup.html
templates/deployments/: list.html  new.html  settings.html
templates/nodes/: add.html  list.html
templates/scripts/: add.html  list.html
templates/templates/: list.html
tests/: conftest.py  test.env  test_auth.py
